@@ -23,8 +23,8 @@ public class StartUp implements ApplicationListener<ContextRefreshedEvent>{
                     Runtime.getRuntime().exec("cmd.exe /c start kafkaWindows.bat");
                     Thread.sleep(14000);
                 } else if (SystemUtils.IS_OS_LINUX) {
-                    new ProcessBuilder("chmod +x", "kafkaLinux.sh").start();
-                    new ProcessBuilder("/kafkaLinux.sh").start();
+                    Runtime.getRuntime().exec("chmod +x kafkaLinux.sh");
+                    new ProcessBuilder("./kafkaLinux.sh").start();
                 } else
                     System.err.println("OS is not compatible");
             } catch (IOException e) {
